# api-showcase

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.kiro/specs/openapi-showcase/: tasks.md
apps/: __init__.py
apps/auth/: __init__.py  config.py  main.py
apps/auth/models/: __init__.py  token.py  user.py
apps/auth/routes/: auth.py  users.py
apps/auth/schemas/: __init__.py  auth.py  user.py
apps/auth/services/: __init__.py  auth_service.py  user_service.py
apps/file_processor/: __init__.py  config.py  main.py
apps/file_processor/models/: __init__.py  conversion_job.py  file.py
apps/file_processor/routes/: __init__.py  files.py  uploads.py  webhooks.py
apps/file_processor/schemas/: __init__.py  conversion.py  file.py
apps/file_processor/services/: __init__.py  backoff.py  conversion_service.py  upload_service.py
apps/file_processor/tasks/: __init__.py  conversion_tasks.py
apps/gateway/: __init__.py  config.py  main.py  openapi_bundler.py
apps/notifications/: __init__.py  config.py  main.py
apps/notifications/models/: __init__.py  notification.py
apps/notifications/routes/: __init__.py  notifications.py  sse.py  websocket.py
apps/notifications/schemas/: __init__.py  notification.py
apps/notifications/services/: __init__.py  connection_manager.py  notification_service.py
apps/orders/: __init__.py  config.py  main.py
apps/orders/models/: __init__.py  order.py  webhook_event.py
apps/orders/routes/: __init__.py  orders.py  webhooks.py
apps/orders/schemas/: __init__.py  order.py  webhook.py
apps/orders/services/: __init__.py  order_service.py  webhook_service.py
apps/orders/tasks/: __init__.py  webhook_tasks.py
apps/webhook_tester/: __init__.py  config.py  main.py
apps/webhook_tester/models/: __init__.py  bin.py  event.py
apps/webhook_tester/routes/: __init__.py  bins.py  events.py
apps/webhook_tester/schemas/: __init__.py  bin.py  event.py
apps/webhook_tester/services/: __init__.py  bin_service.py  (+1 more)
migrations/: __init__.py  env.py
migrations/versions/: 20241202_000000_001_initial_schema.py
scripts/: entrypoint.sh  seed_data.py
shared/: celery_app.py  config.py
shared/auth/: __init__.py  dependencies.py  jwt.py  password.py
shared/database/: __init__.py  base.py  connection.py  session.py
shared/exceptions/: __init__.py  errors.py  handlers.py
shared/health/: __init__.py  checker.py
shared/middleware/: __init__.py  cors.py  trusted_hosts.py
shared/pagination/: __init__.py  cursor.py
shared/rate_limit/: __init__.py  limiter.py
shared/schemas/: __init__.py  common.py
shared/utils/: __init__.py  serialization.py
tests/: conftest.py
tests/integration/: __init__.py  test_auth_service.py  test_connection_manager.py  test_file_processor_service.py  test_notifications_service.py  test_orders_service.py  test_shared_exceptions.py  test_shared_health.py  test_shared_jwt.py  test_shared_middleware.py  test_shared_pagination.py  test_shared_serialization.py  test_webhook_service.py  test_webhook_tester_service.py
tests/properties/: test_auth_properties.py  test_auth_service_properties.py  test_config_properties.py  test_cors_properties.py  test_error_response_properties.py  test_file_processor_properties.py  test_health_properties.py  test_notifications_properties.py  test_openapi_properties.py  test_orders_properties.py  test_pagination_properties.py  test_rate_limit_properties.py  test_webhook_tester_properties.py
